item부분 제작,swiper,헤더,비주얼 수정

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         <li class="header-btn-left">
           <div class="lang-box">KOR
             <ul class="lang-box-list">
-              <li>KOR</li>
-              <li>ENG</li>
+              <li><a href="#">KOR</a></li>
+              <li><a href="#">ENG</a></li>
             </ul>
           </div>
         </li>
@@ -68,13 +68,36 @@
       </ul>
     </div>
   </header>
-  <!-- 비디오 -->
-  <video class="video">
-
-  </video>
+  <!-- 비주얼 -->
+  <section class="visual">
+    <video class="video" preload="auto" autoplay="autoplay" muted="muted" loop="loop">
+      <source src="http://www.hanaph.co.kr/upload/images/main/20211029075835958.mp4" type="video/mp4">
+    </video>
+  </section>
   <!-- 제품정보 -->
   <section class="items">
-    <div class="inner"></div>
+    <div class="inner clearfix">
+      <div class="items-left">
+        <h2>제품정보</h2>
+        <p>우수한 기술력을 바탕으로 끊임없이 노력하는 <br> 하나제약의 다양한 제품을 만나보세요.</p>
+        <a href="#" class="items-left-button">제품정보 바로가기</a>
+      </div>
+      <div class="items-right">
+        <div class="swiper-container sw-item">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide"><a href="#" class="item-1"></a></div>
+            <div class="swiper-slide"><a href="#" class="item-2"></a></div>
+            <div class="swiper-slide"><a href="#" class="item-3"></a></div>
+            <div class="swiper-slide"><a href="#" class="item-4"></a></div>
+            <div class="swiper-slide"><a href="#" class="item-5"></a></div>
+          </div>
+          <div class="sw-item-control">
+            <div class="sw-item-pg"></div>
+            <button class="sw-item-bt"></button>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
   <!-- 회사소식 -->
   <section class="news">
