item스와이퍼play 버튼 js 작업

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
   <meta name="viewport"
     content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
   <title>하나제약주식회사</title>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
   <!-- jquery -->
   <script src="https://code.jquery.com/jquery-2.2.4.min.js"
     integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
@@ -91,9 +93,13 @@
             <div class="swiper-slide"><a href="#" class="item-4"></a></div>
             <div class="swiper-slide"><a href="#" class="item-5"></a></div>
           </div>
-          <div class="sw-item-control">
+          <div class="sw-item-control clearfix">
+            <button class="sw-item-bt">
+              <span class="material-icons-outlined">
+                pause
+                </span>
+            </button>
             <div class="sw-item-pg"></div>
-            <button class="sw-item-bt"></button>
           </div>
         </div>
       </div>
