--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
   <meta name="viewport"
     content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
   <title>하나제약주식회사</title>
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- jquery -->
   <script src="https://code.jquery.com/jquery-2.2.4.min.js"
     integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
@@ -97,7 +96,7 @@
             <button class="sw-item-bt">
               <span class="material-icons-outlined">
                 pause
-                </span>
+              </span>
             </button>
             <div class="sw-item-pg"></div>
           </div>
@@ -107,11 +106,73 @@
   </section>
   <!-- 회사소식 -->
   <section class="news">
-    <div class="inner"></div>
+    <div class="inner">
+      <h2>회사소식</h2>
+      <p>하나제약의 다양한 소식을 전해드립니다.</p>
+      <div class="news-box">
+        <ul class="news-list clearfix">
+          <li>
+            <a href="#" class="news-1"></a>
+            <p>하나제약, 세계심폐혈관마취학회에서 ‘레미마졸람’<br> 임상결과 발표</p>
+          </li>
+          <li>
+            <a href="#" class="news-2"></a>
+            <p>하나제약, 산업통상자원부 기술개발사업 지원을 받아<br> 조영제 신약 개발 박차</p>
+          </li>
+          <li>
+            <a href="#" class="news-3"></a>
+            <p>조경일 하나제약 회장 ‘서울약대 발전공로상’ 수상</p>
+          </li>
+        </ul>
+      </div>
+      <button class="news-more">회사소식 더보기</button>
+    </div>
   </section>
   <!-- 정보모음 -->
-  <section class="infor">
-    <div class="inner"></div>
+  <section class="inves">
+    <div class="inner">
+      <div class="inves-box">
+        <h2>투자정보</h2>
+        <p>끝없는 도전과 혁신으로 지속적으로 성장하는<br> 하나제약의 IR 정보입니다.</p>
+      </div>
+    </div>
+  </section>
+  <section class="newproduct">
+    <div class="inner">
+      <div class="newproduct-box">
+        <h2>가돌리늄 조영제</h2>
+        <p>하나제약에서 개발중인 다기능성<br>
+          신개념 MRI 조영제(HNP-2006) 신약입니다.</p>
+        <button class="newproduct-box-btn">자세히 보기</button>
+      </div>
+    </div>
+  </section>
+  <section class="job">
+    <div class="inner clearfix">
+      <div class="job-left">
+        <h2>채용정보</h2>
+        <p>하나제약은 도전 앞에서 당당하고<br> 정직한 인재를 기다립니다.</p>
+      </div>
+      <div class="job-right clearfix">
+        <ul class="job-right-list">
+          <li>
+            <h3 class="job-right-title">채용안내</h3>
+            <p class="job-right-txt">도전 앞에서 당당하고 정직한<br> 인재를 기다립니다.</p>
+            <button class="job-right-btn">자세히 보기</button>
+          </li>
+          <li>
+            <h3 class="job-right-title">채용공고</h3>
+            <p class="job-right-txt">하나제약에서 자신의 꿈을<br> 펼쳐보세요</p>
+            <button class="job-right-btn">자세히 보기</button>
+          </li>
+          <li>
+            <h3 class="job-right-title">인사제도</h3>
+            <p class="job-right-txt">하나제약은 체계적인 인사제도를<br> 제공합니다.</p>
+            <button class="job-right-btn">자세히 보기</button>
+          </li>
+        </ul>
+      </div>
+    </div>
   </section>
   <!-- 하단영역 -->
   <footer class="footer">
