--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
   <meta name="viewport"
     content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
   <title>하나제약주식회사</title>
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- jquery -->
   <script src="https://code.jquery.com/jquery-2.2.4.min.js"
     integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
@@ -43,11 +42,64 @@
       <a href="#" class="logo"></a>
       <div class="gnb">
         <ul class="menu clearfix">
-          <li><a href="#">회사소개</a></li>
-          <li><a href="#">제품</a></li>
-          <li><a href="#">연구개발</a></li>
-          <li><a href="#">투자정보</a></li>
-          <li><a href="#">채용정보</a></li>
+          <li>
+            <a href="#">회사소개</a>
+            <div class="sub-box">
+              <ul class="sub-list ">
+                <li><a href="#">CEO 인사말</a></li>
+                <li><a href="#">기업이념 및 비전</a></li>
+                <li><a href="#">연혁</a></li>
+                <li><a href="#">윤리경영</a></li>
+                <li><a href="#">사업장 소개</a></li>
+                <li><a href="#">회사소식</a></li>
+                <li><a href="#">문의사항</a></li>
+                <li><a href="#">공시자료</a></li>
+              </ul>
+            </div>
+          </li>
+          <li>
+            <a href="#">제품</a>
+            <!-- <div class="sub-box">
+              <ul class="sub-list">
+                <li><a href="#">제품 정보</a></li>
+                <li><a href="#">제품 소식</a></li>
+              </ul>
+            </div> -->
+          </li>
+          <li>
+            <a href="#">연구개발</a>
+            <!-- <div class="sub-box">
+              <ul class="sub-list">
+                <li><a href="#">연구소 소개</a></li>
+                <li><a href="#">연구개발 성과</a></li>
+                <li><a href="#">연구현황</a></li>
+                <li><a href="#">글로벌 사업</a></li>
+              </ul>
+            </div> -->
+          </li>
+          <li>
+            <a href="#">투자정보</a>
+            <!-- <div class="sub-box">
+              <ul class="sub-list">
+                <li><a href="#">지배구조</a></li>
+                <li><a href="#">재무정보</a></li>
+                <li><a href="#">주가정보</a></li>
+                <li><a href="#">IR</a></li>
+                <li><a href="#">홍보센터</a></li>
+              </ul>
+            </div> -->
+          </li>
+          <li>
+            <a href="#">채용정보</a>
+            <!-- <div class="sub-box">
+              <ul class="sub-list">
+                <li><a href="#">채용안내</a></li>
+                <li><a href="#">채용공고</a></li>
+                <li><a href="#">인사제도</a></li>
+                <li><a href="#">채용문의</a></li>
+              </ul>
+            </div> -->
+          </li>
         </ul>
       </div>
       <ul class="header-btn clearfix">
@@ -69,9 +121,10 @@
       </ul>
     </div>
   </header>
+  <div class="sub-box-bg"></div>
   <!-- 비주얼 -->
   <section class="visual">
-    <video class="video" preload="auto" autoplay="autoplay" muted="muted" loop="loop">
+    <video class="video" preload="auto" autoplay="autoplay" muted="muted" >
       <source src="http://www.hanaph.co.kr/upload/images/main/20211029075835958.mp4" type="video/mp4">
     </video>
   </section>
@@ -93,11 +146,7 @@
             <div class="swiper-slide"><a href="#" class="item-5"></a></div>
           </div>
           <div class="sw-item-control clearfix">
-            <button class="sw-item-bt">
-              <span class="material-icons-outlined">
-                pause
-              </span>
-            </button>
+            <button class="sw-item-bt"></button>
             <div class="sw-item-pg"></div>
           </div>
         </div>
