--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
       <div class="gnb">
         <ul class="menu clearfix">
           <li>
-            <a href="#">회사소개</a>
-            <div class="sub-box">
-              <ul class="sub-list ">
+            <a href="#" class="gnb-name gnb-name-1">회사소개</a>
+            <div class="sub-box sub-box-1">
+              <ul class="sub-list">
                 <li><a href="#">CEO 인사말</a></li>
                 <li><a href="#">기업이념 및 비전</a></li>
                 <li><a href="#">연혁</a></li>
@@ -58,28 +58,28 @@
             </div>
           </li>
           <li>
-            <a href="#">제품</a>
-            <!-- <div class="sub-box">
+            <a href="#" class="gnb-name gnb-name-2">제품</a>
+            <div class="sub-box sub-box-2">
               <ul class="sub-list">
                 <li><a href="#">제품 정보</a></li>
                 <li><a href="#">제품 소식</a></li>
               </ul>
-            </div> -->
+            </div>
           </li>
           <li>
-            <a href="#">연구개발</a>
-            <!-- <div class="sub-box">
+            <a href="#" class="gnb-name gnb-name-3">연구개발</a>
+            <div class="sub-box sub-box-3">
               <ul class="sub-list">
                 <li><a href="#">연구소 소개</a></li>
                 <li><a href="#">연구개발 성과</a></li>
                 <li><a href="#">연구현황</a></li>
                 <li><a href="#">글로벌 사업</a></li>
               </ul>
-            </div> -->
+            </div>
           </li>
           <li>
-            <a href="#">투자정보</a>
-            <!-- <div class="sub-box">
+            <a href="#" class="gnb-name gnb-name-4">투자정보</a>
+            <div class="sub-box sub-box-4">
               <ul class="sub-list">
                 <li><a href="#">지배구조</a></li>
                 <li><a href="#">재무정보</a></li>
@@ -87,18 +87,18 @@
                 <li><a href="#">IR</a></li>
                 <li><a href="#">홍보센터</a></li>
               </ul>
-            </div> -->
+            </div>
           </li>
           <li>
-            <a href="#">채용정보</a>
-            <!-- <div class="sub-box">
+            <a href="#" class="gnb-name gnb-name-5">채용정보</a>
+            <div class="sub-box sub-box-5">
               <ul class="sub-list">
                 <li><a href="#">채용안내</a></li>
                 <li><a href="#">채용공고</a></li>
                 <li><a href="#">인사제도</a></li>
                 <li><a href="#">채용문의</a></li>
               </ul>
-            </div> -->
+            </div>
           </li>
         </ul>
       </div>
@@ -106,15 +106,15 @@
         <li class="header-btn-left">
           <div class="lang-box">KOR
             <ul class="lang-box-list">
-              <li><a href="#">KOR</a></li>
-              <li><a href="#">ENG</a></li>
+              <li><a href="#" class="lang-box-lang">KOR</a></li>
+              <li><a href="#" class="lang-box-lang">ENG</a></li>
             </ul>
           </div>
         </li>
         <li class="header-btn-right">
           <a href="#" class="hb-bt">
             <span></span>
-            <span></span>
+            <span class="hb-bt-line"></span>
             <span></span>
           </a>
         </li>
@@ -124,7 +124,7 @@
   <div class="sub-box-bg"></div>
   <!-- 비주얼 -->
   <section class="visual">
-    <video class="video" preload="auto" autoplay="autoplay" muted="muted" >
+    <video class="video" preload="auto" autoplay="autoplay" muted="muted" loop="true">
       <source src="http://www.hanaph.co.kr/upload/images/main/20211029075835958.mp4" type="video/mp4">
     </video>
   </section>
@@ -225,7 +225,31 @@
   </section>
   <!-- 하단영역 -->
   <footer class="footer">
-    <div class="inner"></div>
+    <div class="inner">
+      <ul class="footer-left">
+        <li><a href="#">환경안전보건경영방침</a></li>
+        <li><a href="#">개인정보처리방침</a></li>
+        <li><a href="#">이용약관</a></li>
+        <li><a href="#">문의하기</a></li>
+        <li><a href="#">오시는 길</a></li>
+        <li><a href="#">사이트맵</a></li>
+      </ul>
+      <div class="footer-right">
+        <button class="footer-group">그룹웨어</button>
+        <button class="footer-order">온라인 주문</button>
+      </div>
+    </div>
+    <hr>
+    <div class="inner">
+      <div class="f-logo"></div>
+      <div class="footer-txt">
+        <p><span>서울본사</span><span>서울시 강남구 테헤란로 407 EK Tower 10층</span><em>|</em><span>TEL02-577-7667</span><em>|</em><span>FAX02-566-6003</span></p>
+        <p><span>서울본사</span><span>서울시 강남구 테헤란로 407 EK Tower 10층</span><em>|</em><span>TEL02-577-7667</span><em>|</em><span>FAX02-566-6003</span></p>
+        <p><span>서울본사</span><span>서울시 강남구 테헤란로 407 EK Tower 10층</span><em>|</em><span>TEL02-577-7667</span><em>|</em><span>FAX02-566-6003</span></p>
+        <p><span>서울본사</span><span>서울시 강남구 테헤란로 407 EK Tower 10층</span><em>|</em><span>TEL02-577-7667</span><em>|</em><span>FAX02-566-6003</span></p>
+      </div>
+      <p class="copy"></p>
+    </div>
   </footer>
 
 </div>
