--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
   <meta name="viewport"
     content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
   <title>하나제약주식회사</title>
+  <link
+    href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp"
+    rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css"
+    integrity="sha512-gMjQeDaELJ0ryCI+FtItusU9MkAifCZcGq789FrzkiM49D8lbDhoaUaIX4ASU187wofMNlgBJ4ckbrXM9sE6Pg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- jquery -->
   <script src="https://code.jquery.com/jquery-2.2.4.min.js"
     integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
@@ -35,7 +41,80 @@
   <script src="js/script.js"></script>
   <link rel="stylesheet" href="css/main.css">
 </head>
+<!-- 안내창 -->
+<div class="modal-wrap">
+  <div class="modal-main">
+    <h1>하나제약주식회사 클론코딩</h1>
+    <p>
+      이 사이트는 <b>스터디용</b>으로 제작되었으며 리소스는 <strong>원저작자</strong>에게 있습니다. <br>
+      해당 사이트 관련 문제 사항이 있으시면 연락해주시면 삭제하겠습니다.<br>
+      본 사이트는 Chrome 에 최적화되어 있습니다.
+    </p>
+
+    <button class="modal-close"><i class="fas fa-times"></i></button>
+  </div>
+</div>
 <div class="wrap">
+  <!-- 더보기 메뉴 -->
+  <div class="more-menu">
+    <div class="inner">
+      <div class="more-menu-header">
+        <div class="more-logo"></div>
+      </div>
+      <div class="more-gnb">
+        <ul class="more-deth1">
+          <li>
+            <a href="#">회사소개</a>
+            <ul class="more-deth2">
+              <li><a href="#">CEO 인사말</a></li>
+              <li><a href="#">기업이념 및 비전</a></li>
+              <li><a href="#">연혁</a></li>
+              <li><a href="#">윤리경영</a></li>
+              <li><a href="#">사업장 소개</a></li>
+              <li><a href="#">회사소식</a></li>
+              <li><a href="#">문의사항</a></li>
+              <li><a href="#">공시자료</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#">제품</a>
+            <ul class="more-deth2">
+              <li><a href="#">제품정보</a></li>
+              <li><a href="#">제품 소식</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#">연구개발</a>
+            <ul class="more-deth2">
+              <li><a href="#">연구소 소개</a></li>
+              <li><a href="#">연구개발 성과</a></li>
+              <li><a href="#">연구현황</a></li>
+              <li><a href="#">글로벌 사업</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#">투자정보</a>
+            <ul class="more-deth2">
+              <li><a href="#">지배구조</a></li>
+              <li><a href="#">재무정보</a></li>
+              <li><a href="#">주가정보</a></li>
+              <li><a href="#">IR</a></li>
+              <li><a href="#">홍보센터</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#">채용정보</a>
+            <ul class="more-deth2">
+              <li><a href="#">채용안내</a></li>
+              <li><a href="#">채용공고</a></li>
+              <li><a href="#">인사제도</a></li>
+              <li><a href="#">채용문의</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
   <!-- 상단영역 -->
   <header class="header">
     <div class="inner clearfix">
@@ -43,8 +122,8 @@
       <div class="gnb">
         <ul class="menu clearfix">
           <li>
-            <a href="#" class="gnb-name gnb-name-1">회사소개</a>
-            <div class="sub-box sub-box-1">
+            <a href="#" class="gnb-name">회사소개</a>
+            <div class="sub-box">
               <ul class="sub-list">
                 <li><a href="#">CEO 인사말</a></li>
                 <li><a href="#">기업이념 및 비전</a></li>
@@ -58,8 +137,8 @@
             </div>
           </li>
           <li>
-            <a href="#" class="gnb-name gnb-name-2">제품</a>
-            <div class="sub-box sub-box-2">
+            <a href="#" class="gnb-name">제품</a>
+            <div class="sub-box">
               <ul class="sub-list">
                 <li><a href="#">제품 정보</a></li>
                 <li><a href="#">제품 소식</a></li>
@@ -67,8 +146,8 @@
             </div>
           </li>
           <li>
-            <a href="#" class="gnb-name gnb-name-3">연구개발</a>
-            <div class="sub-box sub-box-3">
+            <a href="#" class="gnb-name">연구개발</a>
+            <div class="sub-box">
               <ul class="sub-list">
                 <li><a href="#">연구소 소개</a></li>
                 <li><a href="#">연구개발 성과</a></li>
@@ -78,8 +157,8 @@
             </div>
           </li>
           <li>
-            <a href="#" class="gnb-name gnb-name-4">투자정보</a>
-            <div class="sub-box sub-box-4">
+            <a href="#" class="gnb-name">투자정보</a>
+            <div class="sub-box">
               <ul class="sub-list">
                 <li><a href="#">지배구조</a></li>
                 <li><a href="#">재무정보</a></li>
@@ -90,8 +169,8 @@
             </div>
           </li>
           <li>
-            <a href="#" class="gnb-name gnb-name-5">채용정보</a>
-            <div class="sub-box sub-box-5">
+            <a href="#" class="gnb-name">채용정보</a>
+            <div class="sub-box">
               <ul class="sub-list">
                 <li><a href="#">채용안내</a></li>
                 <li><a href="#">채용공고</a></li>
@@ -121,12 +200,13 @@
       </ul>
     </div>
   </header>
-  <div class="sub-box-bg"></div>
+
   <!-- 비주얼 -->
   <section class="visual">
-    <video class="video" preload="auto" autoplay="autoplay" muted="muted" loop="true">
+    <video class="video" preload="auto" autoplay="autoplay" muted="muted" loop="loop">
       <source src="http://www.hanaph.co.kr/upload/images/main/20211029075835958.mp4" type="video/mp4">
     </video>
+    <button class="video-btn">play</button>
   </section>
   <!-- 제품정보 -->
   <section class="items">
@@ -225,7 +305,7 @@
   </section>
   <!-- 하단영역 -->
   <footer class="footer">
-    <div class="inner">
+    <div class="inner clearfix">
       <ul class="footer-left">
         <li><a href="#">환경안전보건경영방침</a></li>
         <li><a href="#">개인정보처리방침</a></li>
@@ -239,16 +319,20 @@
         <button class="footer-order">온라인 주문</button>
       </div>
     </div>
-    <hr>
-    <div class="inner">
+    <p class="footer-line"></p>
+    <div class="inner footer-bottom clearfix">
       <div class="f-logo"></div>
       <div class="footer-txt">
-        <p><span>서울본사</span><span>서울시 강남구 테헤란로 407 EK Tower 10층</span><em>|</em><span>TEL02-577-7667</span><em>|</em><span>FAX02-566-6003</span></p>
-        <p><span>서울본사</span><span>서울시 강남구 테헤란로 407 EK Tower 10층</span><em>|</em><span>TEL02-577-7667</span><em>|</em><span>FAX02-566-6003</span></p>
-        <p><span>서울본사</span><span>서울시 강남구 테헤란로 407 EK Tower 10층</span><em>|</em><span>TEL02-577-7667</span><em>|</em><span>FAX02-566-6003</span></p>
-        <p><span>서울본사</span><span>서울시 강남구 테헤란로 407 EK Tower 10층</span><em>|</em><span>TEL02-577-7667</span><em>|</em><span>FAX02-566-6003</span></p>
+        <p><span>서울본사</span><span>서울시 강남구 테헤란로 407 EK Tower 10층</span><em>|</em><span>TEL
+            02-577-7667</span><em>|</em><span>FAX 02-566-6003</span></p>
+        <p><span>상신공장</span><span>경기도 화성시 향남읍 제약공단3길 133</span><em>|</em><span>TEL
+            031-353-5883</span><em>|</em><span>FAX 031-353-2472</span></p>
+        <p><span>하길공장</span><span>경기도 화성시 향남읍 제약단지로 13-39</span><em>|</em><span>TEL
+            031-366-5511~5</span><em>|</em><span>FAX 031-366-5510</span></p>
+        <p><span>판교연구소</span><span>경기도 성남시 분당구 판교로 255 판교이노벨리 E동 101~103호</span><em>|</em><span>TEL
+            031-698-3832</span><em>|</em><span>FAX 031-698-3842</span></p>
+        <p class="copy">COPYRIGHT ⒞ 2020 HANA PHARM CO., LTD. ALL RIGHTS RESERVED.</p>
       </div>
-      <p class="copy"></p>
     </div>
   </footer>
 
