반응형 작업 진행중

--- a/index.html
+++ b/index.html
@@ -60,11 +60,12 @@
     <div class="inner">
       <div class="more-menu-header">
         <div class="more-logo"></div>
+        <button class="more-menu-close"></button>
       </div>
       <div class="more-gnb">
-        <ul class="more-deth1">
+        <ul class="more-deth1 clearfix">
           <li>
-            <a href="#">회사소개</a>
+            <p >회사소개</p>
             <ul class="more-deth2">
               <li><a href="#">CEO 인사말</a></li>
               <li><a href="#">기업이념 및 비전</a></li>
@@ -77,14 +78,14 @@
             </ul>
           </li>
           <li>
-            <a href="#">제품</a>
+            <p >제품</p>
             <ul class="more-deth2">
               <li><a href="#">제품정보</a></li>
               <li><a href="#">제품 소식</a></li>
             </ul>
           </li>
           <li>
-            <a href="#">연구개발</a>
+            <p >연구개발</p>
             <ul class="more-deth2">
               <li><a href="#">연구소 소개</a></li>
               <li><a href="#">연구개발 성과</a></li>
@@ -93,7 +94,7 @@
             </ul>
           </li>
           <li>
-            <a href="#">투자정보</a>
+            <p >투자정보</p>
             <ul class="more-deth2">
               <li><a href="#">지배구조</a></li>
               <li><a href="#">재무정보</a></li>
@@ -103,7 +104,7 @@
             </ul>
           </li>
           <li>
-            <a href="#">채용정보</a>
+            <p >채용정보</p>
             <ul class="more-deth2">
               <li><a href="#">채용안내</a></li>
               <li><a href="#">채용공고</a></li>
