클론코딩 진행중,반응형 진행중

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <div class="more-gnb">
         <ul class="more-deth1 clearfix">
           <li>
-            <p >회사소개</p>
+            <p>회사소개</p>
             <ul class="more-deth2">
               <li><a href="#">CEO 인사말</a></li>
               <li><a href="#">기업이념 및 비전</a></li>
@@ -78,14 +78,14 @@
             </ul>
           </li>
           <li>
-            <p >제품</p>
+            <p>제품</p>
             <ul class="more-deth2">
               <li><a href="#">제품정보</a></li>
               <li><a href="#">제품 소식</a></li>
             </ul>
           </li>
           <li>
-            <p >연구개발</p>
+            <p>연구개발</p>
             <ul class="more-deth2">
               <li><a href="#">연구소 소개</a></li>
               <li><a href="#">연구개발 성과</a></li>
@@ -94,7 +94,7 @@
             </ul>
           </li>
           <li>
-            <p >투자정보</p>
+            <p>투자정보</p>
             <ul class="more-deth2">
               <li><a href="#">지배구조</a></li>
               <li><a href="#">재무정보</a></li>
@@ -104,7 +104,7 @@
             </ul>
           </li>
           <li>
-            <p >채용정보</p>
+            <p>채용정보</p>
             <ul class="more-deth2">
               <li><a href="#">채용안내</a></li>
               <li><a href="#">채용공고</a></li>
@@ -239,21 +239,25 @@
     <div class="inner">
       <h2>회사소식</h2>
       <p>하나제약의 다양한 소식을 전해드립니다.</p>
-      <div class="news-box">
-        <ul class="news-list clearfix">
-          <li>
-            <a href="#" class="news-1"></a>
-            <p>하나제약, 세계심폐혈관마취학회에서 ‘레미마졸람’<br> 임상결과 발표</p>
-          </li>
-          <li>
-            <a href="#" class="news-2"></a>
-            <p>하나제약, 산업통상자원부 기술개발사업 지원을 받아<br> 조영제 신약 개발 박차</p>
-          </li>
-          <li>
-            <a href="#" class="news-3"></a>
-            <p>조경일 하나제약 회장 ‘서울약대 발전공로상’ 수상</p>
-          </li>
-        </ul>
+      <div class="swiper-container sw-news">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+              <a href="#" class="news-1"></a>
+              <p>하나제약, 세계심폐혈관마취학회에서 ‘레미마졸람’<br> 임상결과 발표</p>
+          </div>
+          <div class="swiper-slide">
+              <a href="#" class="news-2"></a>
+              <p>하나제약, 산업통상자원부 기술개발사업 지원을 받아<br> 조영제 신약 개발 박차</p>
+          </div>
+          <div class="swiper-slide">  
+              <a href="#" class="news-3"></a>
+              <p>조경일 하나제약 회장 ‘서울약대 발전공로상’ 수상</p>    
+          </div>
+
+          <button class="sw-news-prev"></button>
+          <button class="sw-news-next"></button>
+
+        </div>
       </div>
       <button class="news-more">회사소식 더보기</button>
     </div>
