클론코딩진행중, 반응형 진행중

--- a/index.html
+++ b/index.html
@@ -242,22 +242,22 @@
       <div class="swiper-container sw-news">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-              <a href="#" class="news-1"></a>
-              <p>하나제약, 세계심폐혈관마취학회에서 ‘레미마졸람’<br> 임상결과 발표</p>
+            <a href="#" class="news-1"></a>
+            <p>하나제약, 세계심폐혈관마취학회에서 ‘레미마졸람’ 임상결과 발표</p>
           </div>
           <div class="swiper-slide">
-              <a href="#" class="news-2"></a>
-              <p>하나제약, 산업통상자원부 기술개발사업 지원을 받아<br> 조영제 신약 개발 박차</p>
+            <a href="#" class="news-2"></a>
+            <p>하나제약, 산업통상자원부 기술개발사업 지원을 받아 조영제 신약 개발 박차</p>
           </div>
-          <div class="swiper-slide">  
-              <a href="#" class="news-3"></a>
-              <p>조경일 하나제약 회장 ‘서울약대 발전공로상’ 수상</p>    
+          <div class="swiper-slide">
+            <a href="#" class="news-3"></a>
+            <p>조경일 하나제약 회장 ‘서울약대 발전공로상’ 수상</p>
           </div>
 
-          <button class="sw-news-prev"></button>
-          <button class="sw-news-next"></button>
 
         </div>
+        <button class="sw-news-prev"></button>
+        <button class="sw-news-next"></button>
       </div>
       <button class="news-more">회사소식 더보기</button>
     </div>
@@ -267,7 +267,16 @@
     <div class="inner">
       <div class="inves-box">
         <h2>투자정보</h2>
-        <p>끝없는 도전과 혁신으로 지속적으로 성장하는<br> 하나제약의 IR 정보입니다.</p>
+        <p>끝없는 도전과 혁신으로<br class="media-br"> 지속적으로 성장하는 하나제약의 IR 정보입니다.</p>
+      </div>
+    </div>
+  </section>
+  <section class="byfavo">
+    <div class="inner">
+      <div class="byfavo-box newproduct-box">
+        <h2>바이파보주</h2>
+        <p>하나제약이 생산 및 공급하는<br> 국내 허가된 글로벌 마취제 신약 입니다.</p>
+        <button class="byfavo-box-btn newproduct-box-btn">자세히 보기</button>
       </div>
     </div>
   </section>
@@ -275,8 +284,8 @@
     <div class="inner">
       <div class="newproduct-box">
         <h2>가돌리늄 조영제</h2>
-        <p>하나제약에서 개발중인 다기능성<br>
-          신개념 MRI 조영제(HNP-2006) 신약입니다.</p>
+        <p>하나제약에서 개발중인 다기능성
+          신개념 MRI 조영제(HNP-2006)<br class="media-br"> 신약입니다.</p>
         <button class="newproduct-box-btn">자세히 보기</button>
       </div>
     </div>
@@ -285,26 +294,33 @@
     <div class="inner clearfix">
       <div class="job-left">
         <h2>채용정보</h2>
-        <p>하나제약은 도전 앞에서 당당하고<br> 정직한 인재를 기다립니다.</p>
+        <p>하나제약은 도전 앞에서 당당하고 정직한 인재를 기다립니다.</p>
       </div>
-      <div class="job-right clearfix">
-        <ul class="job-right-list">
-          <li>
-            <h3 class="job-right-title">채용안내</h3>
-            <p class="job-right-txt">도전 앞에서 당당하고 정직한<br> 인재를 기다립니다.</p>
-            <button class="job-right-btn">자세히 보기</button>
-          </li>
-          <li>
-            <h3 class="job-right-title">채용공고</h3>
-            <p class="job-right-txt">하나제약에서 자신의 꿈을<br> 펼쳐보세요</p>
-            <button class="job-right-btn">자세히 보기</button>
-          </li>
-          <li>
-            <h3 class="job-right-title">인사제도</h3>
-            <p class="job-right-txt">하나제약은 체계적인 인사제도를<br> 제공합니다.</p>
-            <button class="job-right-btn">자세히 보기</button>
-          </li>
-        </ul>
+      <div class="swiper-container sw-job">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <div class="job-box">
+              <h3 class="job-right-title">채용안내</h3>
+              <p class="job-right-txt">도전 앞에서 당당하고 정직한<br> 인재를 기다립니다.</p>
+              <button class="job-right-btn">자세히 보기</button>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="job-box">
+              <h3 class="job-right-title">채용공고</h3>
+              <p class="job-right-txt">하나제약에서 자신의 꿈을<br> 펼쳐보세요</p>
+              <button class="job-right-btn">자세히 보기</button>
+            </div>
+            </li>
+          </div>
+          <div class="swiper-slide">
+            <div class="job-box">
+              <h3 class="job-right-title">인사제도</h3>
+              <p class="job-right-txt">하나제약은 체계적인 인사제도를<br> 제공합니다.</p>
+              <button class="job-right-btn">자세히 보기</button>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
