반응형 완료

--- a/index.html
+++ b/index.html
@@ -321,6 +321,8 @@
             </div>
           </div>
         </div>
+        <button class="sw-job-prev"></button>
+        <button class="sw-job-next"></button>
       </div>
     </div>
   </section>
@@ -344,15 +346,15 @@
     <div class="inner footer-bottom clearfix">
       <div class="f-logo"></div>
       <div class="footer-txt">
-        <p><span>서울본사</span><span>서울시 강남구 테헤란로 407 EK Tower 10층</span><em>|</em><span>TEL
-            02-577-7667</span><em>|</em><span>FAX 02-566-6003</span></p>
-        <p><span>상신공장</span><span>경기도 화성시 향남읍 제약공단3길 133</span><em>|</em><span>TEL
-            031-353-5883</span><em>|</em><span>FAX 031-353-2472</span></p>
-        <p><span>하길공장</span><span>경기도 화성시 향남읍 제약단지로 13-39</span><em>|</em><span>TEL
-            031-366-5511~5</span><em>|</em><span>FAX 031-366-5510</span></p>
-        <p><span>판교연구소</span><span>경기도 성남시 분당구 판교로 255 판교이노벨리 E동 101~103호</span><em>|</em><span>TEL
-            031-698-3832</span><em>|</em><span>FAX 031-698-3842</span></p>
-        <p class="copy">COPYRIGHT ⒞ 2020 HANA PHARM CO., LTD. ALL RIGHTS RESERVED.</p>
+        <p><span>서울본사</span><span>서울시 강남구 테헤란로 407 EK Tower 10층</span><i>|</i><span class="f-span">TEL
+            02-577-7667</span><em>|</em><span class="f-span">FAX 02-566-6003</span></p>
+        <p><span>상신공장</span><span>경기도 화성시 향남읍 제약공단3길 133</span><i>|</i><span class="f-span">TEL
+            031-353-5883</span><em>|</em><span class="f-span">FAX 031-353-2472</span></p>
+        <p><span>하길공장</span><span>경기도 화성시 향남읍 제약단지로 13-39</span><i>|</i><span class="f-span">TEL
+            031-366-5511~5</span><em>|</em><span class="f-span">FAX 031-366-5510</span></p>
+        <p><span>판교연구소</span><span>경기도 성남시 분당구 판교로 255 판교이노벨리 E동 101~103호</span><i>|</i><span class="f-span">TEL
+            031-698-3832</span><em>|</em><span class="f-span">FAX 031-698-3842</span></p>
+        <p class="copy">COPYRIGHT ⒞ 2020 HANA PHARM CO., LTD. ALL RIGHTS<br> RESERVED.</p>
       </div>
     </div>
   </footer>
