--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
   <!-- swiper -->
   <link rel="stylesheet" href="js/swiper/swiper.min.css">
   <script src="js/swiper/swiper.min.js"></script>
+  <!-- aos 관련 코드 -->
+  <link href="js/aos/aos.css" rel="stylesheet">
+  <script src="js/aos/aos.js"></script>
   <!-- 사용자 지정 -->
   <script src="js/script.js"></script>
   <link rel="stylesheet" href="css/main.css">
