클론코딩 완료

--- a/index.html
+++ b/index.html
@@ -324,8 +324,10 @@
             </div>
           </div>
         </div>
-        <button class="sw-job-prev"></button>
-        <button class="sw-job-next"></button>
+        <div class="swiper-job-control">
+          <button class="sw-job-prev"></button>
+          <button class="sw-job-next"></button>
+        </div>
       </div>
     </div>
   </section>
