동영상파일 수정, 파비콘 수정

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="shortcut icon" href="images/favicon.ico" />
+  <link rel="shortcut icon" href="images/favicon.png" />
   <link rel="apple-touch-icon-precomposed" href="images/apple-touch-icon.png">
   <meta property="og:url" content="http://www.hanaph.co.kr/index.do" />
   <meta property="og:title" content="하나제약주식회사" />
@@ -207,9 +207,7 @@
 
   <!-- 비주얼 -->
   <section class="visual">
-    <video class="video" preload="auto" autoplay="autoplay" muted="muted" loop="loop">
-      <source src="http://www.hanaph.co.kr/upload/images/main/20211029075835958.mp4" type="video/mp4">
-    </video>
+    <img src="images/v (1).gif" alt="" class="video">
     <button class="video-btn">play</button>
   </section>
   <!-- 제품정보 -->
