--- a/index.html
+++ b/index.html
@@ -45,18 +45,23 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <!-- 안내창 -->
-<div class="modal-wrap">
-  <div class="modal-main">
-    <h1>하나제약주식회사 클론코딩</h1>
-    <p>
-      이 사이트는 <b>스터디용</b>으로 제작되었으며 리소스는 <strong>원저작자</strong>에게 있습니다. <br>
-      해당 사이트 관련 문제 사항이 있으시면 연락해주시면 삭제하겠습니다.<br>
-      본 사이트는 Chrome 에 최적화되어 있습니다.
-    </p>
+    <div class="modal-wrap">
+      <div class="modal-main">
+        <h1> 클론코딩</h1>
+        <p>
+          이 사이트는 <b>스터디용</b>으로 제작되었으며 리소스는 <strong>원저작자</strong>에게 있습니다. <br>
+          해당 사이트 관련 문제 사항이 있으시면 연락해주시면 삭제하겠습니다.<br>
+          본 사이트는 Chrome 에 최적화되어 있습니다.
+        </p>
+        <div class="modal-line"></div>
+        <span>
+          
+        </span>
+    
+        <button class="modal-close"><i class="fas fa-times"></i></button>
+      </div>
+    </div>
 
-    <button class="modal-close"><i class="fas fa-times"></i></button>
-  </div>
-</div>
 <div class="wrap">
   <!-- 더보기 메뉴 -->
   <div class="more-menu">
