동영상 파일 mp4교체 시도

--- a/index.html
+++ b/index.html
@@ -212,7 +212,10 @@
 
   <!-- 비주얼 -->
   <section class="visual">
-    <img src="images/v (1).gif" alt="" class="video">
+    <video class="video" preload="auto" autoplay="autoplay" muted="muted" loop="loop">
+      <source src="images/v.mp4" type="video/mp4">
+    </video>
+    <!-- <img src="images/v (1).gif" alt="" class="video"> -->
     <button class="video-btn">play</button>
   </section>
   <!-- 제품정보 -->
