--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
         </p>
         <div class="modal-line"></div>
         <span>
+          1. visual 비디오 플레이버튼 작동 활성화
+          2. 반응형으로 제작 되었습니다. 
+          3. pc버전에서 반응형으로 바뀔때 swiper로 바뀌는 작업 실시
           
         </span>
     
@@ -215,7 +218,7 @@
     <video class="video" preload="auto" autoplay="autoplay" muted="muted" loop="loop">
       <source src="images/v.mp4" type="video/mp4">
     </video>
-    <!-- <img src="images/v (1).gif" alt="" class="video"> -->
+
     <button class="video-btn">play</button>
   </section>
   <!-- 제품정보 -->
