--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           1. visual 비디오 플레이버튼 작동 활성화
           2. 반응형으로 제작 되었습니다. 
           3. pc버전에서 반응형으로 바뀔때 swiper로 바뀌는 작업 실시
-          
+          4. favicon 제작
         </span>
     
         <button class="modal-close"><i class="fas fa-times"></i></button>
