--- a/index.html
+++ b/index.html
@@ -55,16 +55,16 @@
     </p>
     <div class="modal-line"></div>
     <span>
-      1. visual 비디오 플레이버튼 작동 활성화
+      1. visual 비디오 플레이버튼 작동 활성화 추가
     </span>
     <span>
-      2. 반응형으로 제작 되었습니다.
+      2. 반응형으로 제작
     </span>
     <span>
-      3. pc버전에서 반응형으로 바뀔때 swiper로 바뀌는 작업 실시
+      3. pc버전에서 반응형 할때 두 섹션 swiper로 교체
     </span>
     <span> 
-      4. favicon 제작
+      4. favicon 제작 및 추가
     </span>
 
     <button class="modal-close"><i class="fas fa-times"></i></button>
