--- a/index.html
+++ b/index.html
@@ -46,26 +46,31 @@
 </head>
 <!-- 안내창 -->
 <div class="modal-wrap">
+
   <div class="modal-main">
+      <div class="modal-img">
+    <img src="images/modalcode.png" alt="">
+  </div>
     <h1> 클론코딩</h1>
     <p>
       이 사이트는 <b>스터디용</b>으로 제작되었으며 리소스는 <strong>원저작자</strong>에게 있습니다. <br>
       해당 사이트 관련 문제 사항이 있으시면 연락해주시면 삭제하겠습니다.<br>
       본 사이트는 Chrome 에 최적화되어 있습니다.
     </p>
-    <div class="modal-line"></div>
-    <span>
-      1. visual 비디오 플레이버튼 작동 활성화 추가
-    </span>
-    <span>
-      2. 반응형으로 제작
-    </span>
-    <span>
-      3. pc버전에서 반응형 할때 두 섹션 swiper로 교체
-    </span>
-    <span> 
-      4. favicon 제작 및 추가
-    </span>
+    <div class="modal-box">
+      <span>
+        <em>1.</em> visual 비디오 플레이버튼 작동 활성화 추가
+      </span>
+      <span>
+        <em>2.</em> 반응형으로 제작
+      </span>
+      <span>
+        <em>3.</em> pc버전에서 반응형 할때 두 섹션 swiper로 교체
+      </span>
+      <span> 
+        <em>4.</em> favicon 제작 및 추가
+      </span>
+    </div>
 
     <button class="modal-close"><i class="fas fa-times"></i></button>
   </div>
