--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="modal-img">
     <img src="images/modalcode.png" alt="">
   </div>
-    <h1> 클론코딩</h1>
+    <h1>하나제약주식회사 클론코딩</h1>
     <p>
       이 사이트는 <b>스터디용</b>으로 제작되었으며 리소스는 <strong>원저작자</strong>에게 있습니다. <br>
       해당 사이트 관련 문제 사항이 있으시면 연락해주시면 삭제하겠습니다.<br>
