--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
       <span>
         <em>3.</em> favicon 제작 및 추가
       </span>
+      <span>
+        <em>4.</em> pc버전에서 반응형으로 바뀔때 swiper로 변경
+      </span>
       <span> 
         
       </span>
